// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button changes the class when hovered 1`] = `
<button
  className="normal sc-bdVaJa ehfstA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Foo
</button>
`;

exports[`Button changes the class when hovered 2`] = `
<button
  className="hovered sc-bdVaJa ehfstA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Foo
</button>
`;

exports[`Button changes the class when hovered 3`] = `
<button
  className="normal sc-bdVaJa ehfstA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Foo
</button>
`;
